# bevy_ui_animation

./: Cargo.toml  README.md
examples/: example.rs
src/: ani_utils.rs  animator.rs  lib.rs  plugin.rs
src/ui/: builder.rs  component.rs  game_class.rs  mod.rs
